fix issue with error message z-index

--- a/frontend/static/css/home.css
+++ b/frontend/static/css/home.css
@@ -114,7 +114,7 @@ hr{
     position: absolute;
     top: 20px;
     right: 20px;
-    z-index: 99;
+    z-index: 9999;
     display: none;
 }
 
@@ -123,7 +123,7 @@ hr{
     position: absolute;
     top: 20px;
     right: 20px;
-    z-index: 99;
+    z-index: 9999;
     display: none;
 }
 
@@ -225,13 +225,14 @@ hr{
     padding-right: 16px;
     background: white;
     border-radius: 5px;
-    z-index: 999;
+    z-index: 99;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   }
 
   .modal-title{
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold
+    text-align: center;
+    color: black;
+    font-size: 20px;
+    font-weight: bold
   }
   
